--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,17 @@
     <link rel="icon" href="https://res.cloudinary.com/dvgumv3vu/image/upload/v1694163360/done_fqaten.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="canonical" href="https://www.Wellroom.in" />
+    <meta name="author" content="wellroom.in" />
+    <meta
+    name="description"
+    content="Find all room`s pg hostels and shop or offices free without charge and brokerage"
+  />
+  <meta
+  name="keywords"
+  content=" rooms in indore , free ,room , hostel , pg , shops , shops in indore , room for boys , room for girls , hostel for boys , hostel for girls , pg for boys , pg for girls , shops free  , no brokerage , without brokerage , wellroom wellroom.in , wellroom , achha room , best room , free room , room for student   "
+/>
+
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -35,7 +46,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>HSrooms</title>
+    <title>Wellroom</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
