--- a/public/index.html
+++ b/public/index.html
@@ -2,24 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://res.cloudinary.com/dvgumv3vu/image/upload/v1694497611/done_dindh1.png" />
+    <link
+      rel="icon"
+      href="https://res.cloudinary.com/dvgumv3vu/image/upload/v1694497611/done_dindh1.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="canonical" href="https://www.Wellroom.in" />
-    <meta name="author" content="wellroom.in" />
-    <meta
-    name="description"
-    content="Find all room`s pg hostels and shop or offices free without charge and brokerage"
-  />
-  <meta
-  name="keywords"
-  content=" rooms in indore , free ,room , hostel , pg , shops , shops in indore , room for boys , room for girls , hostel for boys , hostel for girls , pg for boys , pg for girls , shops free  , no brokerage , without brokerage , wellroom wellroom.in , wellroom , achha room , best room , free room , room for student   "
-/>
 
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
