--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,42 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link rel="canonical" href="https://www.wellroom.in" />
+    <meta
+      name="description"
+      content="we are providing rooms flats hostels shops free without brokerage , Find all room`s pg hostels and shop or offices free without charge and brokerage "
+    />
+    <meta
+      name="keywords"
+      content=" rooms in indore , free ,room , hostel , pg , shops , shops in indore , room for boys , room for girls , hostel for boys , hostel for girls , pg for boys , pg for girls , shops free  , no brokerage , without brokerage , wellroom wellroom.in , wellroom , achha room , best room , free room , room for student ,wellroom , well , room , rooms in indore , free ,room , hostel , pg , shops , shops in indore , room for boys , room for girls , hostel for boys , hostel for girls , pg for boys , pg for girls , shops free  , no brokerage , without brokerage , wellroom wellroom.in , wellroom , achha room , best room , free room , room for student   "
+    />
+    <meta name="theme-color" content="#E6E6FA" />
+    <meta property="og:site_name" content="https://www.wellroom.in" />
+   
+    <meta property="og:type" content="article" />
+   
+
+    <meta
+      property="og:title"
+      content="Home - Wellroom , room  without brokerage"
+    />
+    <meta
+      property="og:description"
+      content=" we are providing rooms flats hostels shops free without brokerage , Find all room`s pg hostels and shop or offices free without charge and brokerage "
+    />
+    <meta property="og:url" content="https://www.wellroom.in" />
+    <meta name="twitter:title" content="Home - wellroom free brokerage" />
+    <meta
+      name="twitter:description"
+      content=" we are providing rooms flats hostels shops free without brokerage , Find all room`s pg hostels and shop or offices free without charge and brokerage|"
+    />
+    <meta name="twitter:site" content="https://www.wellroom.in" />
+    <meta name="twitter:label1" content="Written by" />
+
+    <meta name="twitter:data1" content=" wellroom " />
+
+    <meta name="author" content="https://www.wellroom.in" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
